# tech-challenger-soat10-phase4-payment-microservice

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
config/: celery_config.py  database.py  settings.py
config/init_db/: init_db.sh  run_migrations.py
config/init_db/migrations/: 001_populate_payment_methods.py  002_populate_payment_status.py
src/: app.py
src/adapters/driven/notification_providers/: celery_notification_service.py  http_notification_service.py  hybrid_notification_service.py
src/adapters/driven/payment_providers/: mercado_pago_gateway.py
src/adapters/driven/repositories/: payment_method_repository.py  payment_repository.py  payment_status_repository.py
src/application/usecases/payment_method_usecase/: create_payment_method_usecase.py  delete_payment_method_usecase.py  get_all_payment_methods_usecase.py  get_payment_method_by_id_usecase.py  get_payment_method_by_name_usecase.py  update_payment_method_usecase.py
src/application/usecases/payment_status_usecase/: create_payment_status_usecase.py  delete_payment_status_usecase.py  (+4 more)
src/constants/: payment_method_enum.py  payment_status.py
src/core/: containers.py
terraform/app/: main.tf  mock_remote_state.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/db/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/infra/: outputs.tf
terraform/mock/: mock_mongo_outputs.tfstate
tests/: conftest.py  test_mercado_pago_gateway.py
tests/factories/: payment_factory.py  payment_method_factory.py  payment_status_factory.py
(+50 files in other folders)
